fixing error handler